force-app/main/default/objects/CampaignMember/fields/Campaign_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Attribution__c</fullName>
    <description>DCP-16865</description>
    <label>Campaign Attribution</label>
    <length>100</length>
    <type>Text</type>
</CustomField>