force-app/main/default/objects/CampaignMember/fields/Campaign_Member_Notes__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Notes__c</fullName>
    <businessOwnerUser>jcolburn@illumina.com</businessOwnerUser>
    <description>Notes specific to the campaign member within a campaign.</description>
    <inlineHelpText>Campaign Member Notes record notes specific to a campaign member within a campaign.</inlineHelpText>
    <label>Campaign Member Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>