force-app/main/default/objects/CampaignMember/fields/City_Local__c.field-meta.xml
<CustomField>
    <fullName>City_Local__c</fullName>
    <description>Field stores local city name of Campaign Member</description>
    <formula>IF(ISBLANK(ContactId),Lead.City_Local__c,Contact.City_Local__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City (Local)</label>
    <type>Text</type>
</CustomField>