force-app/main/default/objects/CampaignMember/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <description>Created as part of story CMCM-7969 . This field is to be added on campaign member to capture from contact and lead object which Account Engagement form type was submitted at campaign member creation</description>
    <inlineHelpText>Account Engagement form type submitted by person at time of campaign member creation</inlineHelpText>
    <label>Form Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>