force-app/main/default/objects/CampaignMember/fields/Free_Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Free_Trial_End_Date__c</fullName>
    <description>Field that captures free trial end date coming from Zuora through Snap</description>
    <label>Free Trial End Date</label>
    <type>Date</type>
</CustomField>