force-app/main/default/objects/CampaignMember/fields/Free_Trial_iCredit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Free_Trial_iCredit_Balance__c</fullName>
    <description>Field that captures icredit balance coming from Zuora through Snap</description>
    <label>Free Trial iCredit Balance</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>