force-app/main/default/objects/CampaignMember/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <description>Field stores job function value for lead or contact</description>
    <formula>IF( 
!ISBLANK(ContactId), 
TEXT(Contact.Job_Function__c), 
TEXT(Lead.Job_Function__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Function</label>
    <type>Text</type>
</CustomField>