force-app/main/default/objects/CampaignMember/fields/Last_Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_Marketing_Campaign__c</fullName>
    <businessOwnerUser>jcolburn@illumina.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the last marketing campaign where this individual was a member</description>
    <inlineHelpText>Indicates the last marketing campaign where this individual was a member</inlineHelpText>
    <label>Last Marketing Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>