force-app/main/default/objects/CampaignMember/fields/Lead_Marketing_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Marketing_Contact_Status__c</fullName>
    <description>Field stores lead status or contact marketing status</description>
    <formula>IF( ISPICKVAL(Contact.Marketing_Contact_Status__c, &quot;&quot;) , TEXT(Lead.Status) ,TEXT(Contact.Marketing_Contact_Status__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead/Marketing Contact Status</label>
    <type>Text</type>
</CustomField>