force-app/main/default/objects/CampaignMember/fields/Opt_In_Status__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Status__c</fullName>
    <description>Field stores opt in status for lead or contact</description>
    <formula>IF(ISBLANK(ContactId),Lead.Opt_In_Status__c,Contact.Opt_In_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opt In Status</label>
    <type>Text</type>
</CustomField>