force-app/main/default/objects/CampaignMember/fields/State_Province_Local__c.field-meta.xml
<CustomField>
    <fullName>State_Province_Local__c</fullName>
    <description>Field stores state/province of Campaign Member</description>
    <formula>IF(ISBLANK(ContactId),Lead.State_Province_Local__c,Contact.State_Province_Local__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State/Province (Local)</label>
    <type>Text</type>
</CustomField>