force-app/main/default/objects/CampaignMember/fields/Street_2_Local__c.field-meta.xml
<CustomField>
    <fullName>Street_2_Local__c</fullName>
    <description>Field stores local street address of the campaign member</description>
    <formula>IF(ISBLANK(ContactId),Lead.Street_2_Local__c,Contact.Street_2_Local__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street 2 (Local)</label>
    <type>Text</type>
</CustomField>